# amplifier-module-tool-iteration-tracker

./: .gitignore  README.md  pyproject.toml
.amplifier/: settings.local.yaml  settings.yaml
.amplifier/local/backups/: transcript_final_20251210_090558.jsonl
amplifier_module_hooks_iteration_tracker/: __init__.py  config.py  natural_language.py
amplifier_module_tool_iteration_tracker/: __init__.py  manager.py
amplifier_module_tool_iteration_tracker/tools/: __init__.py  ask_natural_language.py  base.py  create_iteration.py  list_iterations.py  query_issues.py
docs/: CONFIGURATION.md
src/amplifier_module_hooks_iteration_tracker/: __init__.py  board.py  models.py  query.py  storage.py
tests/: test_manager.py  test_storage.py
tests/unit/iteration/: __init__.py  test_board.py  test_config.py  test_models.py  test_natural_language.py  test_query.py
