[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-hooks-iteration-tracker"
version = "1.0.0"
description = "Iteration/sprint planning and tracking for Amplifier"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Amplifier Team" }
]
keywords = ["amplifier", "iteration", "sprint", "agile", "planning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_iteration_tracker"]

[tool.hatch.build.targets.sdist]
include = [
    "/amplifier_module_hooks_iteration_tracker",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
