[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-tool-iteration-tracker"
version = "1.0.0"
description = "Iteration/sprint planning and tracking tool module for Amplifier"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Mark Licata" }
]
keywords = ["amplifier", "iteration", "sprint", "agile", "planning", "tool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "amplifier-core",
]

[project.entry-points."amplifier.tools"]
tool-iteration-tracker = "amplifier_module_tool_iteration_tracker:mount"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[tool.uv]
package = true

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_iteration_tracker"]

[tool.hatch.build.targets.sdist]
include = [
    "/amplifier_module_tool_iteration_tracker",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
